@@ -5,6 +5,8 @@
 
  * Made it possible to show a spectrum visualiser when built against FFTW
 
+ * Any program arguments are now added to MPD's current playlist
+
 
 1.0.0 (2020-11-05)
 
